added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Managing-Models-At-Scale.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Managing-Models-At-Scale.ipynb
@@ -163,10 +163,135 @@
     "\n",
     "- Considering tags when additional metadata is needed: The metadata within SageMaker's model registry is fixed to the input parameters that are defined in the API. However, tags can be used to supplement additional metadata. An example of the recommended use of tags here would be to capture the S3 version for resources such as the model artifact, in order to include more granularity on artifact tracking.\n",
     "\n",
-    "- Utilizing tags for fine-grained access: In the preceding example, a tag of MLProject is created with the value of weather. In this case, let's assume a weather team is responsible for building weather-related models and only team members from this team should be able to register new models to this model package group or other model package groups created with this tag. Resource tags can be used to establish conditional policies for access, in order to create model packages within specific model package groups. Resource tags can be used to establish conditional policies for access.\n",
-    "\n",
-    "- "
+    "- Utilizing tags for fine-grained access: In the preceding example, a tag of MLProject is created with the value of weather. In this case, let's assume a weather team is responsible for building weather-related models and only team members from this team should be able to register new models to this model package group or other model package groups created with this tag. Resource tags can be used to establish conditional policies for access, in order to create model packages within specific model package groups. Resource tags can be used to establish conditional policies for access."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import os\n",
+    "from sagemaker import get_execution_role, session, image_uris\n",
+    "import boto3\n",
+    "\n",
+    "region = boto3.Session().region_name\n",
+    "\n",
+    "role = get_execution_role()\n",
+    "\n",
+    "sm_client = boto3.client('sagemaker', region_name=region)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Create a Model Group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "model_package_group_name = \"air-quality-\" + str(round(time.time()))\n",
+    "model_package_group_input_dict = {\n",
+    " \"ModelPackageGroupName\" : model_package_group_name,\n",
+    " \"ModelPackageGroupDescription\" : \"model package group for air quality models\",\n",
+    " \"Tags\": [\n",
+    "     {\n",
+    "         \"Key\": \"MLProject\",\n",
+    "         \"Value\": \"weather\"\n",
+    "     }\n",
+    " ]   \n",
+    "}\n",
+    "create_model_pacakge_group_response = sm_client.create_model_package_group(**model_package_group_input_dict)\n",
+    "print('ModelPackageGroup Arn : {}'.format(create_model_pacakge_group_response['ModelPackageGroupArn']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Register a Model Version\n",
+    "\n",
+    "#### First, we need to find the model_url that will be used as input to register the model version. Typically this is included as part of a pipeline; however, in this case we are registering the model outside of a pipeline so we need to pull the data from our previous training job that resulted in a candidate model that is performing well according to our objective metric."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Example: \n",
+    "#training_job = 'sagemaker-xgboost-2021-07-28-02-43-50-684'\n",
+    "training_job = 'REPLACE WITH NAME OF TRAINING JOB'\n",
+    "\n",
+    "training_job_response = sm_client.describe_training_job(\n",
+    "    TrainingJobName=training_job\n",
+    ")\n",
+    "\n",
+    "model_url=training_job_response['ModelArtifacts']['S3ModelArtifacts']\n",
+    "print('Model Data URL', model_url)\n",
+    "\n",
+    "# this line automatically looks for the XGBoost image URI and builds an XGBoost container.\n",
+    "# specify the repo_version depending on your preference.\n",
+    "xgboost_container = image_uris.retrieve(region=boto3.Session().region_name,\n",
+    "                          framework='xgboost', \n",
+    "                          version='1.2-1')\n",
+    "\n",
+    "print('XGBoost Container for Inference:', xgboost_container)\n",
+    "\n",
+    "modelpackage_inference_specification =  {\n",
+    "    \"InferenceSpecification\": {\n",
+    "      \"Containers\": [\n",
+    "         {\n",
+    "            \"Image\": xgboost_container,\n",
+    "             \"ModelDataUrl\": model_url\n",
+    "         }\n",
+    "      ],\n",
+    "      \"SupportedContentTypes\": [ \"text/csv\" ],\n",
+    "      \"SupportedResponseMIMETypes\": [ \"text/csv\" ],\n",
+    "   }\n",
+    " }\n",
+    "\n",
+    "create_model_package_input_dict = {\n",
+    "    \"ModelPackageGroupName\" : model_package_group_name,\n",
+    "    \"ModelPackageDescription\" : \"Model to predict air quality ratings using XGBoost\",\n",
+    "    \"ModelApprovalStatus\" : \"PendingManualApproval\"  \n",
+    "}\n",
+    "create_model_package_input_dict.update(modelpackage_inference_specification)\n",
+    "\n",
+    "create_model_package_response = sm_client.create_model_package(**create_model_package_input_dict)\n",
+    "model_package_arn = create_mode_package_response[\"ModelPackageArn\"]\n",
+    "print('ModelPackage Version ARN : {}'.format(model_package_arn))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's view the detailed of our registered model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm_client.list_model_packages(ModelPackageGroupName=model_package_group_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
