added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Updating-Production-Models.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Updating-Production-Models.ipynb
@@ -457,6 +457,38 @@
     "    ],\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7.2 - Alternatively, update the endpoint to route all live traffic to VariantB in a single step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Update the endpoint to point to VariantB\n",
+    "endpoint_config_new =f\"abtest-b-config-{datetime.now():%Y-%m-%d-%H-%M-%S}\"\n",
+    "\n",
+    "sagemaker_session.create_endpoint_config_from_existing (\n",
+    "    existing_config_name=endpoint_name,\n",
+    "    new_config_name=endpoint_config_new,\n",
+    "    new_production_variants=[variantB]\n",
+    ")\n",
+    "\n",
+    "##Update the endpoint\n",
+    "##Note : This step will fail if the endpoint is still updating\n",
+    "sagemaker_session.update_endpoint(endpoint_name=endpoint_name, endpoint_config_name=endpoint_config_new, wait=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
