added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Updating-Production-Models.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Updating-Production-Models.ipynb
@@ -488,7 +488,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 8. Cleanup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you do not plan to use this endpoint further, you should delete the endpoint to avoid incurring additional charges.\n",
+    "sagemaker_session.delete_endpoint(endpoint_name)"
+   ]
   }
  ],
  "metadata": {
