added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Updating-Production-Models.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Updating-Production-Models.ipynb
@@ -25,6 +25,63 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Standard deployment\n",
+    "\n",
+    "#### This strategy is the most straightforward approach to deploying and updating models in production. In a Standard model deployment, there is always a single active SageMaker endpoint, and the endpoint is configured with a single production variant, which means only a single model is deployed behind the endpoint. All inference traffic is processed by a single model. The endpoint configuration is similar to Endpoint Configuration 1 in Figure 9.1 in the previous section. The following code block shows how to create a production variant. The production variant, variant1, hosts model_name_1 on a single ml.m5.xlarge instance and serves all inference traffic, as indicated by initial_weight=1:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Create production variant\n",
+    "from sagemaker.session import production_variant\n",
+    "variant1 = production_variant(model_name=model_name_1,\n",
+    "                              instance_type=\"ml.m5.xlarge\",\n",
+    "                              initial_instance_count=1,\n",
+    "                              variant_name='VariantA',\n",
+    "                              initial_weight=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The following code block shows how to create an endpoint from the production variant. endpoint_from_production_variants automatically creates an endpoint_configuration with the same name as endpoint_name:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Create the endpoint with a production variants\n",
+    "from sagemaker.session import Session\n",
+    "#Variable for endpoint name\n",
+    "endpoint_name=f\"abtest-{datetime.now():%Y-%m-%d-%H-%M-%S}\"\n",
+    "smsession = Session()\n",
+    "smsession.endpoint_from_production_variants(\n",
+    "            name=endpoint_name,\n",
+    "           production_variants=[variant1]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### To update the endpoint with a newer version of the model, create a new endpoint configuration specifying the new model and infrastructure to deploy the model on. Then, update the endpoint with a new endpoint configuration. The following code block shows the code for updating the endpoint with the new model version:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
