added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Updating-Production-Models.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Updating-Production-Models.ipynb
@@ -82,16 +82,132 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Create production variant 2\n",
+    "\n",
+    "variant2 = production_variant(\n",
+    "  model_name=model_name_2,\n",
+    "  instance_type=\"ml.m5.xlarge\",\n",
+    "  initial_instance_count=1,\n",
+    "  variant_name='Variant2',\n",
+    "  initial_weight=1)\n",
+    "#Create a new endpoint configuration\n",
+    "endpoint_config_new =f\"abtest-b-config-{datetime.now():%Y-%m-%d-%H-%M-%S}\"\n",
+    "smsession.create_endpoint_config_from_existing (\n",
+    "            existing_config_name=endpoint_name,\n",
+    "            new_config_name=endpoint_config_new,\n",
+    "            new_production_variants=[variant2]\n",
+    ")\n",
+    "##Update the endpoint to point to the new endpoint configuration\n",
+    "smsession.update_endpoint(\n",
+    "  endpoint_name=endpoint_name, endpoint_config_name=endpoint_config_new, wait=False)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### One benefit of this approach is that it is a simple, straightforward way to update an endpoint with a new model. When the endpoint is updated with the new endpoint configuration, SageMaker switches the inference requests to the new model while keeping the endpoint InService. This means that the model consumer does not experience any disruption to the service. This is also a cost-effective strategy for updating a real-time endpoint since you only pay for the infrastructure hosting a single model.\n",
+    "\n",
+    "#### On the other hand, model evaluation and testing happen in non-production environments such as the QA or staging environments with test data. Since the new model is not tested in a production environment, it will face the production data volume and live traffic on the new infrastructure for the first time in production. This could lead to unforeseen complications, either with the model hosting the infrastructure or the model's quality.\n",
+    "\n",
+    "#### While evaluating the model in staging environments, it is recommended that you perform load testing to validate that the model can handle the traffic with acceptable latency before moving to production.\n",
+    "\n",
+    "#### Use Standard deployment if the model consumer is risk- and failure-tolerant, such as an internal application that can re-execute the predictions in case of failures. For example, an internal model that predicts employee turnover is a good candidate for Standard deployment.\n",
+    "\n",
+    "#### Since only one model is serving inference requests at a time, this strategy is not suitable for comparing different models. If you are experimenting with different features, multiple algorithms, or hyperparameters, you want to be able to compare the models in production. The next deployment strategy helps with this need.\n",
+    "\n",
+    "## A/B deployment\n",
+    "\n",
+    "#### In the Standard deployment, you have a single endpoint in the production environment with no scope for testing or evaluating the model in production. On the other hand, an A/B deployment strategy is focused on experimentation and exploration, such as comparing the performance of different versions of the same feature.\n",
+    "\n",
+    "#### In this scenario, the endpoint configuration uses two Production Variants: one for model A and one for model B. For a fair comparison of the two models, initial_weight of the two production variants should be the same so that both models handle the same amount of inference traffic. Additionally, make sure the instance type and instance count are also the same. This initial setting is necessary so that neither version of the model is impacted by a difference in traffic patterns or a difference in the underlying compute capacity.\n",
+    "\n",
+    "#### First, create production variant A:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create production variant A\n",
+    "variantA = production_variant(model_name=model_name_1,\n",
+    "                                  instance_type=\"ml.m5.xlarge\",\n",
+    "                                  initial_instance_count=1,\n",
+    "                                  variant_name='VariantA',\n",
+    "                                  initial_weight=1)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Then, create an endpoint with one production variant, which initially serves production traffic:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Variable for endpoint name\n",
+    "endpoint_name=f\"abtest-{datetime.now():%Y-%m-%d-%H-%M-%S}\"\n",
+    "#Create an endpoint with a single production variant\n",
+    "smsession.endpoint_from_production_variants(\n",
+    "            name=endpoint_name,\n",
+    "            production_variants=[variantA]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### When you are ready to test the next version of the model, create another production variant and update the endpoint so that it includes two Production Variants:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create production variant B\n",
+    "variantB = production_variant(model_name=model_name_2,\n",
+    "                                  instance_type=\"ml.m5.xlarge\",\n",
+    "                                  initial_instance_count=1,\n",
+    "                                  variant_name='VariantB',\n",
+    "                                  initial_weight=1)\n",
+    "\n",
+    "##Next update the endpoint to include both production variants\n",
+    "endpoint_config_new =f\"abtest-new-config-{datetime.now():%Y-%m-%d-%H-%M-%S}\"\n",
+    "smsession.create_endpoint_config_from_existing (\n",
+    "            existing_config_name=endpoint_name,\n",
+    "            new_config_name=endpoint_config_new,\n",
+    "            new_production_variants=[variantA,variantB]  ## Two production variants\n",
+    ")\n",
+    "\n",
+    "##Update the endpoint\n",
+    "smsession.update_endpoint(\n",
+    "  endpoint_name=endpoint_name,\n",
+    "  endpoint_config_name=endpoint_config_new, wait=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### To invoke the endpoint, use the invoke_endpoint() API, as shown in the following code. The result of using the invoke_endpoint() API consists of the variant name that serves each specific request:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
